carousel: z-index fix

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -861,7 +861,6 @@ main{
     max-width: 1300px;
     margin: 0 auto;
     /* padding: 0 100px; */
-    z-index: 99;
 }
 
 .carousel-fadeout{
@@ -872,11 +871,10 @@ main{
     width: 100%;
     height: 100%;
     background: rgb(33,32,36);
-    background: linear-gradient(90deg, rgba(33,32,36,1) 0%, rgba(33,32,36,0.797097504323481) 5%, rgba(33,32,36,0) 10%, rgba(33,32,36,0) 90%, rgba(33,32,36,0.8032894547878773) 95%, rgba(33,32,36,1) 100%);
+    background: linear-gradient(90deg, rgba(33,32,36,0) 0%, rgba(33,32,36,0) 5%, rgba(33,32,36,0) 10%, rgba(33,32,36,0) 90%, rgba(33,32,36,0.8032894547878773) 95%, rgba(33,32,36,1) 100%);
 }
 
 .carousel{
-    z-index: 0;
     display: flex;
     gap: 2em;
     padding: 0 100px;
